--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,13 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "dev-master",
+        "mikey179/vfsStream": "1.3.*@dev"
     },
     "autoload": {
+        "classmap": [
+            "tests"
+        ],
         "psr-4": {
             "Nickstr\\NodeDown\\": "src/"
         }
