--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "michelf/php-markdown": "1.4.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master",
+        "mockery/mockery": "dev-master"
     },
     "autoload": {
         "classmap": [
