--- a/nodes/content/home/header.yml
+++ b/nodes/content/home/header.yml
@@ -1,6 +1,6 @@
 - name: header
-  - type: image
-  - template: image
-  - image_type: large
-  - location: /path/to/image.jpg
-  - alt: beep boop
+  type: image
+  template: image.html
+  image_type: large
+  location: /path/to/image.jpg
+  alt: beep boop
