--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "symfony/yaml": "2.5.*@dev",
         "michelf/php-markdown": "1.4.*@dev",
-        "mustache/mustache": "dev-dev"
+        "league/flysystem": ">=0.3.1",
+        "symfony/yaml": "2.5.*@dev",
+        "twig/twig": "1.15.*@dev",
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
